@@ -17,6 +17,7 @@ homevent (0.2.6) stable; urgency=low
     via the Debian init script.
   * Implemented PortAudio interface.
   * Implement precise-interval "every N seconds" wait statements.
+    … and export the timestamp as $wait.
 
  -- Matthias Urlichs <matthias@urlichs.de>  Tue, 01 Jan 2008 12:06:28 +0100
 
